--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,39 +1,40 @@
-.project-grid {
-  @include grid(project-grid-item);
-  width: $content-max-width;
-  margin: 4em auto 0;
-}
+// Projects page
+
+// .project-grid {
+//   @include grid(project-grid-item);
+//   width: $content-max-width;
+//   margin: 4em auto 0;
+// }
 
 .project-grid-item {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: row;
+  display: inline-block;
+  width: 300px;
   padding: 1em;
-  margin-bottom: 24px;
+  // margin-bottom: 24px;
   border: 1px solid darken(white, 10%);
   transition: 200ms ease;
 
-  .project-grid:hover &:hover {
+  .individual-project:hover &:hover {
     cursor: pointer;
     transform: scale(1.1);
     opacity: 1;
   }
 
-  .project-grid:hover & {
+  .individual-project:hover & {
     transform: scale(0.9);
     opacity: 0.8;
   }
 }
 
-.project-grid-item-unit-title,
 .project-grid-item-title {
   font-weight: 400;
-  text-align: center;
-  padding: 0.5em;
-}
-
-.project-grid-item-title {
   letter-spacing: 2px;
   font-size: 1.4em;
+  // text-align: center;
+  margin-bottom: 24px;
+  padding: 0.5em;
 }
 
 .project-grid-item-image {
@@ -43,6 +44,8 @@
   padding-bottom: 80%;
   background-size: cover;
 }
+
+// Individual Project Page
 
 .toc {
   background-color: #F2F7F7;
