changed link so pdx classes page functions

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -20,7 +20,7 @@
         <div class="dropdown-content">
           <a href="/contact" hidden>get in touch</a>
           <a href="/subscribe" hidden>join our mailing list</a>
-          <a href="/class" hidden>PDX Classes</a>
+          <a href="/classes" hidden>PDX Classes</a>
         </div>
       </div>
       <div id="nav-donate-btn" class="col-md-2 col-xs-3">
