changed copyright notice in footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="footer-copyright centered">
     <hr class="footer-separator">
     <div class="footer-organization"
-      <span class="uppercase">Doodles Academy</span> is a nonprofit organization fiscally sponsored by Fractured Atlas
+      <span class="uppercase">Doodles Academy</span> is a 501(c)(3) nonprofit organization.
     </div>
     <div class="footer-social">
 
