--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -3,23 +3,23 @@
 
 <div class="contact-page">
   <h1>Let's stay in touch.</h1>
-  <p>
-    Message us.
-  </p>
+  <h3>Message us.</h3>
   <%= form_tag("/contact", class: "contact-form") do -%>
     <div class="field">
       <label for="contact_request[email_address]">Email</label>
       <input type="text" name="contact_request[email_address]">
     </div>
 
-    <div class="field">
-      <label for="contact_request[first_name]">First Name</label>
-      <input type="text" name="contact_request[first_name]">
-    </div>
+    <div>
+      <div class="field first-name">
+        <label for="contact_request[first_name]">First Name</label>
+        <input type="text" name="contact_request[first_name]">
+      </div>
 
-    <div class="field">
-      <label for="contact_request[last_name]">Last Name</label>
-      <input type="text" name="contact_request[last_name]">
+      <div class="field last-name">
+        <label for="contact_request[last_name]">Last Name</label>
+        <input type="text" name="contact_request[last_name]">
+      </div>
     </div>
 
     <div class="field">
@@ -49,11 +49,23 @@
       <textarea name="contact_request[message]"></textarea>
     </div>
     <div class="field">
-      <input type="checkbox" name="contact_request[subscribe]" checked></input> Subscribe me to the Doodles newsletter.
+      <input type="checkbox" name="contact_request[subscribe]"></input><span>Receive notifications when new lessons are available on the website.</span>
+    </div>
+    <div class="field">
+      <input type="checkbox" name="contact_request[subscribe]"></input><span>Receive notifications when there is a new feature on the website.</span>
+    </div>
+    <div class="field">
+      <input type="checkbox" name="contact_request[subscribe]"></input><span>Receive occasional organizational updates.</span>
     </div>
 
-    <div class='centered'>
-      <input type="submit" class="btn btn-large btn-orange" value="Send us a message">
+    <div>
+      <input type="submit" class="btn btn-large btn-blue" value="send">
     </div>
+
+    <h3>Follow us:</h3>
+
+    <a href="http://facebook.com/doodlesacademy" target="_blank"><%= image_tag 'FB-f-Logo__blue_50.png', class:"contact-logo", alt:"Facebook"  %></a>
+
+    <a href="http://instagram.com/doodlesacademy" target="_blank"><%= image_tag 'Instagram-v051916.png', class:"contact-logo", alt:"Instagram"  %></a>
 </div>
 <% end -%>
