--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -49,13 +49,13 @@
       <textarea name="contact_request[message]"></textarea>
     </div>
     <div class="field">
-      <input type="checkbox" name="contact_request[subscribe]"></input><span>Receive notifications when new lessons are available on the website.</span>
+      <input type="checkbox" name="contact_request[subscribe]" checked></input><span>Receive notifications when new lessons are available on the website.</span>
     </div>
     <div class="field">
-      <input type="checkbox" name="contact_request[subscribe]"></input><span>Receive notifications when there is a new feature on the website.</span>
+      <input type="checkbox" name="contact_request[subscribe]" checked></input><span>Receive notifications when there is a new feature on the website.</span>
     </div>
     <div class="field">
-      <input type="checkbox" name="contact_request[subscribe]"></input><span>Receive occasional organizational updates.</span>
+      <input type="checkbox" name="contact_request[subscribe]" checked></input><span>Receive occasional organizational updates.</span>
     </div>
 
     <div>
