--- a/app/views/contact_requests/thanks.html.erb
+++ b/app/views/contact_requests/thanks.html.erb
@@ -1,6 +1,14 @@
-<div class='thanks'>
-  <h2>Thank you for reaching out</h2>
-  <p>We really appreciate your comments and questions; they help us immensely as we work to grow and strengthen the Doodles Academy platform and community. We'll be in touch!</p>
-  <p>Wishing you an art-filled day.</p>
-  <p class="low-set"><%= link_to "Back to the front page", root_path %></p>
+<div class="contact-page">
+
+  <h1>Thanks!</h1>
+  <div class="thanks centered">
+    <p>We will get back to you as soon as possible.  Meanwhile, follow us on social media, which we keep up to date with artwork from kids participating in our program.</p>
+  </div>
+
+  <div class="centered">
+    <a href="http://facebook.com/doodlesacademy" target="_blank"><%= image_tag 'FB-f-Logo__blue_50.png', class:"contact-logo", alt:"Facebook"  %></a>
+
+    <a href="http://instagram.com/doodlesacademy" target="_blank"><%= image_tag 'Instagram-v051916.png', class:"contact-logo", alt:"Instagram"  %></a>
+  </div>
+
 </div>
