lessons appear in lesson order within admin

--- a/app/views/admin/lessons/index.html.erb
+++ b/app/views/admin/lessons/index.html.erb
@@ -14,7 +14,7 @@
   </thead>
 
   <tbody>
-    <% @lessons.each do |lesson| %>
+    <% @lessons.sort_by(&:lesson_number).each do |lesson| %>
       <tr>
         <td><%= lesson.project.present? ? lesson.project.title : "" %></td>
         <td><%= lesson.project.present? ? lesson.project.academy : "" %></td>
@@ -28,4 +28,3 @@
 </table>
 
 <br>
-
