--- a/app/views/admin/lessons/index.html.erb
+++ b/app/views/admin/lessons/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Project Title</th>
+      <th>Lesson #</th>
       <th>Academy</th>
       <th>Lesson Title</th>
       <th>Updated</th>
@@ -14,9 +15,10 @@
   </thead>
 
   <tbody>
-    <% @lessons.sort_by(&:lesson_number).each do |lesson| %>
+    <% @lessons.sort_by(&:project).sort.each do |lesson| %>
       <tr>
         <td><%= lesson.project.present? ? lesson.project.title : "" %></td>
+        <td><%= lesson.project.present? ? lesson.lesson_number : "" %></td>
         <td><%= lesson.project.present? ? lesson.project.academy : "" %></td>
         <td><%= lesson.title %></td>
         <td><%= "#{time_ago_in_words(lesson.updated_at)} ago".titleize %></td>
