--- a/app/views/admin/lessons/index.html.erb
+++ b/app/views/admin/lessons/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Project Title</th>
-      <th>Lesson #</th>
+      <th>Lsn Num</th>
       <th>Academy</th>
       <th>Lesson Title</th>
       <th>Updated</th>
