--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,7 +1,7 @@
 
 
 .project-grid-item {
-  // display: inline-block;
+  display: inline-block;
   width: 300px;
   padding: 1em;
   margin-bottom: 24px;
