:link: point donate links to square store

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -22,7 +22,7 @@
       </a>
     </div>
     <div style="display: inline">
-      <a class="btn btn-xl btn-blue" style="margin-left: 60px;" href="/donate">
+      <a class="btn btn-xl btn-blue" style="margin-left: 60px;" href="https://squareup.com/store/doodles-academy">
         Donate Now
       </a>
     </div>
