--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,7 +80,7 @@
          <br>
          <br>
          Without donations, this would be impossible.
-         <a class="btn btn-xl btn-white" href="/donate">
+         <a class="btn btn-xl btn-white" href="https://squareup.com/store/doodles-academy">
            Donate Now
          </a>
        </p>
