--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div id="nav-donate-btn" class="col-md-2 col-xs-3">
-        <a href="/donate">donate</a>
+        <a href="https://squareup.com/store/doodles-academy">donate</a>
       </div>
     </div>
   </div>
