:book: update donate text on front page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -70,17 +70,15 @@
    <section class="image-background-section">
      <div class="image-background-content">
        <p>
-         <span class="emulate-h2">Art is not optional.</span>
-         <br>
-         <br>
-         Students engaged in the arts consistently score higher on standardized tests, stay in school longer, and pursue more advanced degrees.
-         <br>
-         <br>
-         We offer our complete program on a donation basis, no strings attached, to any family, school, or community center that needs it.
-         <br>
-         <br>
-         Without donations, this would be impossible.
-         <a class="btn btn-xl btn-white" href="https://squareup.com/store/doodles-academy">
+         <span class="emulate-h2">Donate &amp; Defend Art Education.</span>
+         <br><br>
+         We offer our complete program on a donation basis,
+no strings attached, to any family, school, or
+community center that needs it.
+        <br><br>
+        Without donors like you, this would be impossible.
+        <br><br>
+        <a class="btn btn-xl btn-white" href="https://squareup.com/store/doodles-academy">
            Donate Now
          </a>
        </p>
