--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -9,11 +9,10 @@
 
   h3 {
     color: $warm-gray;
-    margin-bottom: 20px;
+  }
 
-    &:last-of-type {
-      margin-top: 20px;
-    }
+  #contact-follow-us {
+    margin-top: 40px;
   }
 
   .last-name, .first-name {
@@ -27,12 +26,9 @@
     }
   }
 
-  .field {
-    margin: 1em 0;
-    input:not([type='checkbox']),
-    textarea {
+  .mc-field-group {
+    #mce-EMAIL, #mce-FNAME, #mce-LNAME {
       border-radius: 10px;
-      padding: 10px;
       font-size: 1.5em;
     }
     label {
@@ -40,29 +36,10 @@
       font-size: 1em;
       font-weight: 500;
     }
-  }
 
-  select {
-    margin: 20px 0 20px 10px;
-    width: 75%;
-  }
-
-  input[type='checkbox'] {
-    -webkit-appearance:none;
-    margin-right: 5px;
-    margin-bottom: -5px;
-    width:20px;
-    height:20px;
-    background:white;
-    border:1px solid #ddd;
-  }
-
-  input[type='checkbox']:checked {
-    background: radial-gradient(circle at center, $primary-blue .6ex, white .7ex);
-  }
-
-  .btn-blue {
-    margin-top: 10px;
+    &.input-group .mc-checks {
+      margin-right: 5px;
+    }
   }
 
   .contact-logo {
@@ -83,5 +60,4 @@
     }
 
   }
-
 }
