--- a/app/views/shared/_subscribe.html.erb
+++ b/app/views/shared/_subscribe.html.erb
@@ -13,12 +13,12 @@
 
 
     <!-- Begin MailChimp Signup Form -->
-  <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-  <style type="text/css">
-  	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+  <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+  <style type="text/css"> -->
+  	<!-- /*#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}*/
   	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-  	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-  </style>
+  	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ -->
+  <!-- </style> -->
   <div id="mc_embed_signup"  class="newsletter__form">
     <form action="//doodles-academy.us10.list-manage.com/subscribe/post?u=28ca6056cf1fcbb59340d2de6&amp;id=434752e97b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
