--- a/app/views/shared/_subscribe.html.erb
+++ b/app/views/shared/_subscribe.html.erb
@@ -26,7 +26,7 @@
     	<input type="email" value="" name="EMAIL" class="email input__text" id="mce-EMAIL" placeholder="Your email address" required>
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_28ca6056cf1fcbb59340d2de6_434752e97b" tabindex="-1" value=""></div>
-        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button newsletter__submit"></div>
+        <span class="clear"><input type="submit" value="sign up here" name="subscribe" id="mc-embedded-subscribe" class="button newsletter__submit"></span>
         </div>
     </form>
     </div>
