--- a/app/assets/stylesheets/newsletter.scss
+++ b/app/assets/stylesheets/newsletter.scss
@@ -8,7 +8,7 @@
     #mce-EMAIL.input__text.email {
       border: none;
       border-radius: 0;
-      margin-left: -30px;
+      // margin-left: -20px;
       color: $warm-gray;
       outline: none;
       height: 38px;
