--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -14,6 +14,7 @@
     <form action="//doodles-academy.us10.list-manage.com/subscribe/post?u=28ca6056cf1fcbb59340d2de6&id=434752e97b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
       <h1>Let's stay in touch</h1>
+        <h3>Drop us a line at: <a href="mailto:info@doodles-academy.org" target="_top">info@doodles-academy.org</a></h3>
       <h3>Subscribe to our mailing list</h3>
       <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
       <div class="mc-field-group">
@@ -43,21 +44,21 @@
   <div class="mc-field-group input-group">
     <h3>Lesson Notifications </h3>
     <ul>
-      <li><input type="radio" value="16384" name="group[11229]" id="mce-group[11229]-11229-0" class="mc-checks"><label for="mce-group[11229]-11229-0">Yes, please notify me when new projects are loaded on the website</label></li>
+      <li><input type="radio" value="16384" name="group[11229]" id="mce-group[11229]-11229-0" class="mc-checks" checked><label for="mce-group[11229]-11229-0">Yes, please notify me when new projects are loaded on the website</label></li>
       <li><input type="radio" value="524288" name="group[11229]" id="mce-group[11229]-11229-1" class="mc-checks"><label for="mce-group[11229]-11229-1">No, thank you.</label></li>
     </ul>
   </div>
   <div class="mc-field-group input-group">
     <h3>New Feature Notifications </h3>
     <ul>
-      <li><input type="radio" value="131072" name="group[11233]" id="mce-group[11233]-11233-0" class="mc-checks"><label for="mce-group[11233]-11233-0">Yes, please notify me when new features are available on the website.</label></li>
+      <li><input type="radio" value="131072" name="group[11233]" id="mce-group[11233]-11233-0" class="mc-checks" checked><label for="mce-group[11233]-11233-0">Yes, please notify me when new features are available on the website.</label></li>
       <li><input type="radio" value="1048576" name="group[11233]" id="mce-group[11233]-11233-1" class="mc-checks"><label for="mce-group[11233]-11233-1">No, thank you.</label></li>
     </ul>
   </div>
   <div class="mc-field-group input-group">
     <h3>Is it ok if we send you (very) occasional updates  </h3>
     <ul>
-      <li><input type="radio" value="262144" name="group[11237]" id="mce-group[11237]-11237-0" class="mc-checks"><label for="mce-group[11237]-11237-0">Yep! I'm interested to know how Doodles is helping to expand access to art education.</label></li>
+      <li><input type="radio" value="262144" name="group[11237]" id="mce-group[11237]-11237-0" class="mc-checks" checked><label for="mce-group[11237]-11237-0">Yep! I'm interested to know how Doodles is helping to expand access to art education.</label></li>
       <li><input type="radio" value="2097152" name="group[11237]" id="mce-group[11237]-11237-1" class="mc-checks"><label for="mce-group[11237]-11237-1">No, thank you.</label></li>
     </ul>
   </div>
