--- a/app/assets/stylesheets/newsletter.scss
+++ b/app/assets/stylesheets/newsletter.scss
@@ -5,10 +5,29 @@
         background-color: $warm-gray;
     }
 
-    #mce-EMAIL.input__text.email {
+    // #mce-EMAIL.input__text.email {
+    //   border: none;
+    //   border-radius: 0;
+    //   color: $warm-gray;
+    //   outline: none;
+    //   height: 38px;
+    //   padding: 0 30px;
+    //   height: 50px;
+    //   width: 450px;
+    //   font-weight: 400;
+    //   font-family: $primary-font;
+    //   letter-spacing: 0.05em;
+    //   transition: background-color 300ms ease;
+    //
+    //   @include placeholder {
+    //     font-weight: 300;
+    //   }
+    // }
+
+    .input__text {
+      margin-right: 4px;
       border: none;
       border-radius: 0;
-      // margin-left: -20px;
       color: $warm-gray;
       outline: none;
       height: 38px;
