--- a/app/assets/stylesheets/newsletter.scss
+++ b/app/assets/stylesheets/newsletter.scss
@@ -1,31 +1,15 @@
 // Newsletter Subscription Form
 .subscribe {
   .newsletter {
-    #mc_embed_signup.newsletter__form {
+    
+    .newsletter__form {
         background-color: $warm-gray;
+        display: flex;
+        align-content: center;
+        justify-content: center;
     }
 
-    // #mce-EMAIL.input__text.email {
-    //   border: none;
-    //   border-radius: 0;
-    //   color: $warm-gray;
-    //   outline: none;
-    //   height: 38px;
-    //   padding: 0 30px;
-    //   height: 50px;
-    //   width: 450px;
-    //   font-weight: 400;
-    //   font-family: $primary-font;
-    //   letter-spacing: 0.05em;
-    //   transition: background-color 300ms ease;
-    //
-    //   @include placeholder {
-    //     font-weight: 300;
-    //   }
-    // }
-
-    .input__text {
-      margin-right: 4px;
+    #email-submit {
       border: none;
       border-radius: 0;
       color: $warm-gray;
@@ -44,19 +28,13 @@
       }
     }
 
-    .newsletter__form {
-      display: flex;
-      align-content: center;
-      justify-content: center;
-    }
-
     .newsletter__notice {
       color: white;
       padding: 30px 0;
       margin-bottom: -10px;
     }
 
-    .newsletter__submit, #mc-embedded-subscribe.newsletter__submit.button {
+    .newsletter__submit {
       @include textCap;
       background-color: $primary-blue;
       color: white;
