--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -2,27 +2,47 @@
 <% content_for(:hero_image) { image_tag 'heros/dashboard.jpg' } %>
 
 <div class="dashboard">
-  <%= image_tag("person-icon.png", size: "100x100",alt: "person icon", id: "person-icon") %>
+  <div class="teacher-image">
+    <%= image_tag("person-icon.png", size: "200x200",alt: "person icon", id: "person-icon") %>
+    <%= image_tag("camera-icon.png", size: "35x35",alt: "camera icon", id: "camera-icon") %>
+  </div>
 
   <div class="dashboard-fields">
-    <h1 class="welcome">welcome, <% teacher_name = "Filler" "#{teacher_name}" %>Mrs. Johnson!</h1>
+    <h1 class="welcome">
+      welcome, <%= "#{current_user.salutation} #{current_user.last_name}" %>!
+      <%= image_tag("pencil-icon.png", size: "25x25",alt: "pencil icon", class: "pencil-icon") %>
+    </h1>
+
     <div>
       <h1>account settings:</h1>
-
       <div>
-        <h4>classroom data</h4>
+        <h4>
+          classroom data
+          <%= image_tag("pencil-icon.png", size: "20x20",alt: "pencil icon", class: "pencil-icon") %>
+        </h4>
         <p>School</p>
         <p>City, State</p>
         <p>Occupation</p>
         <p>grades</p>
       </div>
       <div>
-        <h4>contact preferences</h4>
+        <h4>
+          contact preferences
+          <%= image_tag("pencil-icon.png", size: "20x20",alt: "pencil icon", class: "pencil-icon") %>
+        </h4>
         <p>PLEASE NOTE THAT ALL MEMBERS WILL RECEIVE OUR NEWSLETTER</p>
-        <p>example@email.com</p>
+        <p><%= current_user.email %></p>
         <p><input type="checkbox" checked>Yes!  I want to be notified of new lessons on the website</p>
       </div>
-
+    </div>
+    <div>
+      <h1>artroom</h1>
+      <div>
+        <h4>continue where you left off:</h4>
+      </div>
+      <div>
+        <h4>view your curriculum & supply lists:</h4>
+      </div>
     </div>
   </div>
 </div>
