--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,25 @@
 <h2>Sign up</h2>
 
+<% resource.build_profile if resource.profile.nil? %>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+
   <%= devise_error_messages! %>
 
-  <% resource.build_profile if resource.profile.nil? %>
-  <%= f.fields_for :profile do |profile| %>
-  
+  <%= f.fields_for :profile do |fp| %>
     <div class="field">
-      <%= profile.label :title %>
-      <%= profile.text_field :title %>
+      <%= fp.label :title %><br />
+      <%= fp.text_field :title, autofocus: true %>
     </div>
 
     <div class="field">
-      <%= profile.label :first_name %>
-      <%= profile.text_field :first_name %>
+      <%= fp.label :first_name %><br />
+      <%= fp.text_field :first_name, autofocus: true %>
     </div>
 
     <div class="field">
-      <%= profile.label :last_name %>
-      <%= profile.text_field :last_name %>
+      <%= fp.label :last_name %><br />
+      <%= fp.text_field :last_name, autofocus: true %>
     </div>
   <% end %>
 
