--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -10,7 +10,7 @@
   #person-icon {
     padding: 5px;
     border: 1px solid $warm-gray;
-    border-radius: 100px;
+    border-radius: 100%;
   }
 
   #camera-icon {
