--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -3,9 +3,18 @@
 
 <div class="dashboard">
   <div class="teacher-image">
-    <%= image_tag("person-icon.png", size: "200x200",alt: "person icon", id: "person-icon") %>
+    <%= image_tag current_user.profile.instructor_image.url, id: "person-icon" %>
     <%= image_tag("camera-icon.png", size: "35x35",alt: "camera icon", id: "camera-icon") %>
   </div>
+
+  <%= form_for :user do |f| %>
+
+    <%= f.fields_for :profile, :html => { :multipart => true } do |fp| %>
+      <div class="field">
+        <%= f.file_field :instructor_image %>
+      </div>
+    <% end %>
+  <% end %>
 
   <div class="dashboard-fields">
     <h1 class="welcome">
@@ -21,7 +30,8 @@
           <%= image_tag("pencil-icon.png", size: "20x20",alt: "pencil icon", class: "pencil-icon") %>
         </h4>
         <p><%= "School: #{current_user.profile.school}" %></p>
-        <p><%= "#{current_user.profile.city_state_country}" %></p>
+        <p><%= "#{current_user.profile.city_state}" %></p>
+        <p><%= "#{current_user.profile.country}" %></p>
         <p><%= "Occupation: #{current_user.profile.occupation}" %></p>
         <p><%= "Grades: #{current_user.profile.grades}" %></p>
       </div>
