--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
   <%= devise_error_messages! %>
 
-  <%= f.fields_for :profile, :html => { :multipart => true } do |fp| %>
+  <%= f.fields_for :profile, html: { multipart: true } do |fp| %>
     <div>
       <%= fp.label "Pic of You" %><br />
       <%= fp.file_field :instructor_image %>
